# nav

./: .gitignore  .stylelintrc.json  AGENTS.md  ARCHITECTURE.html  CONTEXT.md  Cargo.toml  DESIGN.md  LICENSE  Makefile  PRODUCT.md  README.md  TUI_ROLLOUT.md  biome.json  components.json  go.work  go.work.sum  goal-research-context-management.md  install.sh  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.main.json
crates/nav-backend/: Cargo.toml
crates/nav-backend/src/: config.rs  main.rs
crates/nav-backend/tests/: live_sse.rs  recover_payloads.rs
crates/nav-cli/: Cargo.toml
crates/nav-cli/src/: main.rs  upgrade.rs
crates/nav-cli/tests/: cli_models_providers.rs  tmux_viewport.rs
crates/nav-core/: Cargo.toml
crates/nav-core/src/: agent.rs  auth.rs  cli.rs  context_report.rs  control.rs  doctor.rs  extensions.rs  git_checkpoint.rs  git_diff.rs  lib.rs  models.rs  mutation.rs  project.rs  protocol.rs  skills.rs  startup_notices.rs
crates/nav-core/src/agent/: abort.rs  compaction.rs  events.rs  replay.rs  runner.rs  steering.rs  tests.rs
crates/nav-core/src/agent_loop/: compaction_turn.rs  control.rs  events.rs  hooks.rs  mod.rs  model_backend.rs  protocol.rs  prune.rs  runner.rs  subagent.rs  tests.rs
crates/nav-core/src/cli/: commands.rs  mod.rs  sandbox.rs  settings.rs  tests.rs
crates/nav-core/src/context/: ambient.rs  attachments.rs  compaction.rs  extensions.rs  handoff.rs  history.rs  mod.rs  project.rs  replay.rs  replay_policy.rs  report.rs  skills.rs
crates/nav-core/src/guardrails/: mod.rs  preflight.rs
crates/nav-core/src/model/: auth.rs  mod.rs  names.rs  resolve_value.rs
crates/nav-core/src/permissions/: approval.rs  bash_parse.rs  classifier.rs  dangerous.rs  external.rs  mod.rs  protected.rs  safe_commands.rs
crates/nav-core/src/responses/: collector.rs  mod.rs  parser.rs  request.rs  retry.rs  sse.rs  tests.rs  types.rs  websocket.rs
crates/nav-core/src/sandbox/: mod.rs  passthrough.rs  seatbelt.rs  seatbelt.sbpl
crates/nav-core/src/session/: init.sql  mod.rs  tests.rs
crates/nav-core/src/tool_registry/: definitions.rs  dispatch.rs  fs.rs  mod.rs  output_accumulator.rs  patch.rs  read_filter.rs  reduce.rs  shell.rs  truncate.rs
crates/nav-core/src/tools/: fs.rs  mod.rs  output_accumulator.rs  patch.rs  preflight.rs  shell.rs  truncate.rs
crates/nav-core/src/verify/: doctor.rs  git_checkpoint.rs  git_diff.rs  mod.rs  mutation.rs
crates/nav-harness/: Cargo.toml
crates/nav-harness/examples/: model-settings-compat.json  model-settings-env-var.json  model-settings-inline-key.json  model-settings-proxy.json
crates/nav-harness/src/: lib.rs  runtime.rs
crates/nav-harness/src/agents/: auto_title.rs  mod.rs
crates/nav-harness/src/compaction/: breaker.rs  degrade.rs  mod.rs  overflow.rs  prune.rs  replay.rs  summary.rs  validate.rs
crates/nav-harness/src/context/: budget.rs  files.rs  mod.rs  reminders.rs  system_prompt.rs
crates/nav-harness/src/events/: mod.rs
crates/nav-harness/src/guardrails/: doom_loop.rs  mod.rs  step_budget.rs
crates/nav-harness/src/integrations/: mcp.rs  mod.rs
crates/nav-harness/src/models/: api.rs  compat.rs  config.rs  context_limit.rs  decode.rs  dialect.rs  encode.rs  mod.rs  model.rs  openai_completions.rs  provider.rs  resolver.rs
crates/nav-harness/src/observability/: mod.rs
crates/nav-harness/src/sessions/: canonical.rs  confirmations.rs  migrate.rs  mod.rs  sqlite.rs  store.rs
crates/nav-harness/src/skills/: mod.rs
crates/nav-harness/src/tools/: bash.rs  edit.rs  file_queue.rs  ls.rs  mod.rs  read.rs  ripgrep.rs  task.rs  truncation.rs  workspace_mutation.rs  write.rs
crates/nav-harness/src/verification/: mod.rs
crates/nav-harness/src/workspace/: mod.rs  path.rs  shell.rs  snapshot.rs
crates/nav-harness/tests/: anthropic_messages_encoder.rs  canonical_decoder.rs  canonical_encoder.rs  canonical_parts.rs  canonical_subscription_encoder.rs  chatgpt_subscription_decoder.rs  compaction_breaker.rs  compaction_overflow.rs  compaction_prune.rs  compaction_replay.rs  compaction_summary.rs  compaction_validation.rs  context_limit_classifier.rs  cross_provider_replay.rs  degraded_replay.rs  dialect_run_loop.rs  doom_loop_guard.rs  model_output_events.rs  model_resolver.rs  openai_compat_gateway.rs  openai_completions.rs  openai_responses_encoder.rs  sqlite_session_store.rs  step_budget.rs  token_budget.rs
crates/nav-server/: Cargo.toml
crates/nav-server/src/: bootstrap.rs  lib.rs  stdio.rs
crates/nav-server/src/http/: auth.rs  event_mapping.rs  event_store.rs  ids.rs  live.rs  mod.rs  model_run.rs  rpc.rs  sse.rs
crates/nav-server/tests/: http_protocol.rs  protocol_fixtures.rs
crates/nav-server/tests/support/: mod.rs
crates/nav-tui/: Cargo.toml
crates/nav-tui/src/: ansi.rs  app.rs  cells.rs  chat.rs  custom_terminal.rs  history.rs  input.rs  insert_history.rs  lib.rs  metrics.rs  pending_input.rs  pending_queue_widget.rs  status_bar.rs  streaming.rs  terminal_palette.rs  terminal_probe.rs  theme.rs  turn.rs  widget.rs
crates/nav-tui/src/app/: inline_region.rs  mod.rs  overlay.rs  permissions.rs  render.rs  resume_picker.rs  session.rs  status_bar.rs  terminal.rs  turn_lifecycle.rs  turn_task.rs  turns.rs
crates/nav-tui/src/bottom_pane/: approval.rs  clipboard.rs  composer.rs  history_search.rs  input.rs  key_handling.rs  list_picker.rs  mention_popup.rs  mod.rs  model_picker.rs  pending_preview.rs  render.rs  session_picker.rs  skill_popup.rs  slash_popup.rs  status_bar.rs  status_indicator.rs  view.rs
crates/nav-tui/src/cells/: changes.rs  compaction.rs  hooks.rs  messages.rs  mod.rs  model.rs  pending.rs  preview.rs  reasoning.rs  row.rs  separators.rs  sessions.rs  subagents.rs  system.rs  tools.rs  welcome.rs  wrapping.rs
crates/nav-tui/src/commands/: dispatch.rs  mod.rs
crates/nav-tui/src/input/: commands.rs  mod.rs  slash.rs
crates/nav-tui/src/render/: mod.rs  renderable.rs
crates/nav-tui/src/streaming/: chunking.rs  mod.rs  (+2 more)
crates/nav-tui/tests/: composer.rs  snapshot.rs  streaming_characterization.rs
(+499 files in other folders)
