[workspace]
members = [
    "crates/nav-backend",
    "crates/nav-harness",
    "crates/nav-protocol",
    "crates/nav-server",
    "crates/nav-types",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
version = "26.5.12"

[workspace.dependencies]
anyhow = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
