[package]
name = "nav"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nav-local-backend"
path = "src/bin/nav-local-backend.rs"

[dependencies]
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
regex = "1.12.3"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokenizers = { version = "0.23.1", default-features = false, features = ["onig"] }
ureq = { version = "3.3.0", features = ["json"] }
uuid = { version = "1.23.2", features = ["v7"] }

[dev-dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1.0.150"
