[package]
name = "nav-backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "nav-backend"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
nav-harness = { path = "../nav-harness" }
nav-server = { path = "../nav-server" }
serde_json.workspace = true

[dev-dependencies]
nav-types = { path = "../nav-types" }
