[package]
name = "nav-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "nav"
path = "src/main.rs"

[dependencies]
nav-core = { path = "../nav-core" }
nav-tui = { path = "../nav-tui" }
anyhow.workspace = true
clap.workspace = true
dirs.workspace = true
reqwest.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
