[package]
name = "nav-core"
version.workspace = true
edition.workspace = true

[lib]
name = "nav_core"

[dependencies]
anyhow.workspace = true
clap.workspace = true
dirs.workspace = true
futures-util.workspace = true
reqwest.workspace = true
rusqlite = { workspace = true, features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
similar.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
ulid.workspace = true

[dev-dependencies]
tempfile.workspace = true
