[package]
name = "nav-core"
version.workspace = true
edition.workspace = true

[lib]
name = "nav_core"

[dependencies]
anyhow.workspace = true
base64 = "0.22.1"
clap.workspace = true
dirs.workspace = true
futures-util.workspace = true
ignore = "0.4.25"
reqwest.workspace = true
regex = "1"
rusqlite = { workspace = true, features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
similar.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
ulid.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
