[package]
name = "nav-harness"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nav-types = { path = "../nav-types" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.48", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "time"] }
