[package]
name = "nav-harness"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
libc = "0.2"
nav-types = { path = "../nav-types" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.48", features = ["fs", "io-util", "macros", "process", "sync", "time"] }

[dev-dependencies]
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "time"] }
