[package]
name = "nav-harness"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
libc = "0.2"
nav-types = { path = "../nav-types" }
reqwest.workspace = true
# `bundled` compiles SQLite from source with FTS5 + JSON1 enabled (libsqlite3-sys
# defaults), so no separate json1/fts5 feature flags are required.
rusqlite = { version = "0.40", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.48", features = ["fs", "io-util", "macros", "process", "sync", "time"] }

[dev-dependencies]
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "time"] }
