[package]
name = "nav-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
nav-harness = { path = "../nav-harness" }
nav-protocol = { path = "../nav-protocol" }
nav-types = { path = "../nav-types" }
serde.workspace = true
serde_json.workspace = true
