[package]
name = "nav-tui"
version.workspace = true
edition.workspace = true

[lib]
name = "nav_tui"

[dependencies]
nav-core = { path = "../nav-core" }
crossterm.workspace = true
dirs.workspace = true
ratatui.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
nucleo-matcher = "0.3.1"
ignore = "0.4.25"
arboard = "3.6.1"
image = "0.25.10"
uuid = { version = "1.23.1", features = ["v4"] }
url = "2.5"

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
