[package]
name = "nav-tui"
version.workspace = true
edition.workspace = true

[dependencies]
nav-core = { path = "../nav-core" }
anyhow.workspace = true
crossterm = { workspace = true, features = ["event-stream"] }
ratatui = { workspace = true, features = ["unstable-widget-ref"] }
tokio.workspace = true
futures-util.workspace = true
serde_json.workspace = true
tracing.workspace = true
unicode-width = "0.2"

[dev-dependencies]
tempfile.workspace = true
